2010-04-29  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Another stab at getting the /lib,
	* library/platform/pkgIndex.tcl: /lib64 difference right for
	linux. Package updated to version 1.0.7.

2010-04-18  Donal K. Fellows  <dkf@users.sf.net>

	* doc/unset.n: [Bug 2988940]: Fix typo.

2010-04-14  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Linux platform identification:
	* library/platform/pkgIndex.tcl: Check /lib64 for existence of
	files matching libc* before accepting it as base directory. This
	can happen on weirdly installed 32bit systems which have an empty
	or partially filled /lib64 without an actual libc. Bumped to
	version 1.0.6.

2010-04-06  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclCmdMZ.c (Tcl_RegexpObjCmd): fixed object leak.

2010-04-02  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclStringObj.c: (SetStringFromAny): avoid trampling
	over the tclEmptyStringRep->bytes as it is thread-shared
	(thx to Gustaf Neumann for the (hard) work of locating this one).

2010-03-01  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* unix/tclUnixChan.c: [backported] Refrain from a possibly lengthy
	reverse-DNS lookup on 0.0.0.0 when calling [fconfigure -sockname]
	on an universally-bound (default) server socket.

2010-02-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclExecute.c:   Fix [Bug 2954959] expr abs(-0.0) is -0.0
	* tests/expr.test         Added some test cases, backported from 8.5

2010-02-11  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCompile.c: [Bug 2949302]: Fixed leak of support
	structures for [info frame] which occured when bytecode
	compilation fails.

2010-02-01  Donal K. Fellows  <dkf@users.sf.net>

	* generic/regexec.c (ccondissect, crevdissect): [Bug 2942697]: Rework
	these functions so that certain pathological patterns are matched much